# axum_api

./: Cargo.toml  init.sql
src/: error.rs  handler.rs  main.rs  utils.rs
src/handler/: auth.rs
src/models/: auth.rs
