[package]
name = "axum_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.20", features=["headers"]}
serde = {version="1.0.188", features=["derive"]}
serde_json = "1.0.107"
sqlx = {version="0.7.2", features=["runtime-tokio-rustls", "postgres", "json"]}
tokio = {version="1.32.0", features=["full"]}
tower-http = {version="0.4.4", features=["cors"]}
tracing = "0.1.37"
tracing-subscriber = {version="0.3.17", features=["env-filter"]}
